doing the text-align correctly. Not sure why the padding didn't work.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -219,7 +219,6 @@ h1 {
 
 .small-text .title {
 	/*font-size: x-small;*/
-	text-align: center;
 	font-size: 80%;
 }
 /*********** END Navbar **************/
